# agent-trading-hood-alpha

./: .env.example  .gitignore  README.md  pyproject.toml
config/: trading.toml
data/: README.md  sample_prices.csv
data/history/: soxl.csv  soxs.csv
data/live_quotes/: latest.json
data/raw/: soxl_nasdaq_1y.json  soxs_nasdaq_1y.json
docs/: live_automation.md  new_device_setup.md  soxl_soxs_rules.md
reports/daily/: 2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md
reports/premarket/: 2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  (+10 more)
scripts/: daily_routine.md  robinhood_mcp_workflow.md
tests/: test_authorization.py  test_backtest.py  test_config.py  test_indicators.py  test_market_data.py  test_pair_strategy.py  test_premarket.py  test_risk.py
tradebot/: __init__.py  authorization.py  backtest.py  broker.py  cli.py  config.py  data.py  indicators.py  journal.py  market_data.py  models.py  premarket.py  review.py  risk.py  strategy.py
(+34 files in other folders)
