[project]
name = "trades"
version = "0.1.0"
description = "Paper-first trading research, risk management, and journaling toolkit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
market-data = ["yfinance>=0.2.40"]
dev = ["pytest>=8.0.0"]

[project.scripts]
tradebot = "tradebot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
